--- a/blogpost.html
+++ b/blogpost.html
@@ -6,5 +6,8 @@
   <body>
     <h1>Aqui vamos a hacer un blog post</h1>
     <p>Y este es el parrafo</p>
+    <p>
+      Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadisticamente no lo eres... por ahora.
+    </p>
   </body>
 </html>
